--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "~0.8.4" } # Web framework that focuses on ergonomics and modularity.
-tokio = { version = "~1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.
+axum = { version = "0.8", features = ["macros"] } # framework
+tokio = {version = "1", features = ["macros", "rt-multi-thread", "net"] }
+sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"]}
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
+dotenvy = "0.15"
